src/test/ui/feature-gate-negate-unsigned.stderr
error[E0600]: cannot apply unary operator `-` to type `usize`
  --> $DIR/feature-gate-negate-unsigned.rs:20:23
   |
20 |     let _max: usize = -1;
   |                       ^^

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/feature-gate-negate-unsigned.rs:24:14
   |
24 |     let _y = -x;
   |              ^^

error: aborting due to 2 previous errors

